# web-app-py

./: .gitignore  Dockerfile  README.md  makefile  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci-cd.yml
app/: __init__.py  home.py
helm/: Chart.yaml
helm/stage/: values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
terraform/: .terraform.lock.hcl  data.tf  eks.tf  main.tf  planfile  provider.tf  variables.tf  vpc.tf
terraform/config/: dev.tfvars  prod.tfvars  stage.tfvars
