[tool.poetry]
name = "web-app-py"
version = "0.1.0"
description = ""
authors = ["sstoneju <sstoneju@kakao.com>"]
readme = "README.md"
packages = [{include = "web_app_py"}]

[tool.poetry.dependencies]
python = "3.8"
flask = "^2.2.3"
gunicorn = "^20.1.0"
psutil = "^5.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
